<resources>
    <string name="app_name">Home Pharmacy</string>
    <string name="title_home">edit</string>
    <string name="title_dashboard">view</string>
    <string name="title_notifications">manage</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">registration</string>
    <string name="username">username</string>
    <string name="password">password (4 digits)</string>
    <string name="confirm">confirm password</string>
    <string name="letsgo">create an account</string>
    <string name="password_mismatch">passwords mismatching</string>
    <string name="login">login</string>
    <string name="wrong_password">wrong password</string>
    <string name="welcome">"welcome back, "</string>
    <string name="fab" translatable="false">fab</string>
    <string name="about_me">"Hello there "</string>
    <string name="old_password">old password</string>
    <string name="password_changed">password updated successfully</string>
    <string name="log_out_confirm_message">
        This action will delete all data and you will need to register again. Do you want to proceed?
    </string>
    <string name="no">no</string>
    <string name="log_out_confirm_title">are you sure?</string>
    <string name="yes">yes</string>
</resources>